--- a/sw/tile_slave/Makefile
+++ b/sw/tile_slave/Makefile
@@ -26,7 +26,7 @@ ODIR				:=	output
 TEMP				:=	output_temp
 TARGET			:=	$(ODIR)/$(TARGET_NAME)
 LD					:=	sections.ld
-INC					:=	common
+INC					:=	../common
 _OBJ    		:=	$(patsubst init/%,%.o,$(basename $(wildcard init/*.S)))
 _OBJ    		+=	$(patsubst init/%,%.o,$(basename $(wildcard init/*.c)))
 _OBJ    		+=	$(patsubst src/%,%.o,$(basename $(wildcard src/*.c)))
